--- a/styles/index.scss
+++ b/styles/index.scss
@@ -50,7 +50,7 @@ p {
 
 #title {
     position: absolute;
-    height: 100px;
+    height: 110px;
     width: 240px;
     top: 60px;
 }
@@ -103,8 +103,8 @@ button.about {
     text-decoration: underline;
     padding-left: 10px;
     cursor: pointer;
-    font-family: "Times New Roman", Times, serif;
-    font-size: 1em;
+    font-family: Arial, sans-serif;
+    font-size: .7em;
     text-align: left;
 }
 
@@ -198,7 +198,7 @@ h1.about {
         border: none;
         text-decoration: underline;
         cursor: pointer;
-        font-family: "Times New Roman", Times, serif;
+        font-family: Arial, sans-serif;
         font-size: 1em;
         text-align: left;
     }
